--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button class="inline-flex uppercase bg-green-500 hover:bg-green-700 p-6 text-white rounded-xl border focus:outline-none focus:ring-4 focus:ring-red-600 focus:ring-opacity-80 ">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
-                      </svg>
+                    </svg>
                     <h2 class="font-medium">Buy Now </h2></button>
             </div>
             <div>
@@ -44,5 +44,56 @@
             </div>
         </section>
     </header>
+    <section class="container ">   
+        <h2 class="text-5xl text-gray-800 font-medium p-15">Women Jacket</h2>
+        <div class="grid grid-cols-3 gap-4 ">
+            <div class="p-6 space-y-4 shadow-2xl box-border">
+                <img class="bg-gray-200 rounded" src="images/jacket-1.png" alt="">
+                <h1 class="text-3xl font-bold text-gray-800 text-center">Yellow Coat Jacket</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, saepe.</p>
+                <div class="flex justify-between items-center">
+                    <span class=" text-yellow-400 text-4xl text-center "><h2 >$234</h2></span>
+                    <button class="inline-flex uppercase bg-green-500 hover:bg-green-700 p-6 text-white rounded-xl border focus:outline-none focus:ring-4 focus:ring-red-600 focus:ring-opacity-80 ">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                        </svg>
+                        <h2 class="font-medium">Buy Now </h2></button>
+                </div>
+            </div>
+            <div class="p-6 space-y-4 shadow-2xl box-border">
+                <img class="bg-gray-200 rounded" src="images/jacket-2.png" alt="">
+                <h1 class="text-3xl font-bold text-gray-800 text-center">Yellow Coat Jacket</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, saepe.</p>
+                <div class="flex justify-between items-center">
+                    <span class=" text-yellow-400 text-4xl text-center "><h2 >$234</h2></span>
+                    <button class="inline-flex uppercase bg-green-500 hover:bg-green-700 p-6 text-white rounded-xl border focus:outline-none focus:ring-4 focus:ring-red-600 focus:ring-opacity-80 ">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                        </svg>
+                        <h2 class="font-medium">Buy Now </h2></button>
+                </div>
+            </div>
+            <div class="p-6 space-y-4 shadow-2xl box-border">
+                <img class="bg-gray-200 rounded" src="images/jacket-3.png" alt="">
+                <h1 class="text-3xl font-bold text-gray-800 text-center">Yellow Coat Jacket</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, saepe.</p>
+                <div class="flex justify-between items-center">
+                    <span class=" text-yellow-400 text-4xl text-center "><h2 >$234</h2></span>
+                    <button class="inline-flex uppercase bg-green-500 hover:bg-green-700 p-6 text-white rounded-xl border focus:outline-none focus:ring-4 focus:ring-red-600 focus:ring-opacity-80 ">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                        </svg>
+                        <h2 class="font-medium">Buy Now </h2></button>
+                </div>
+            </div>
+            
+            
+        </div>
+    </section>
+    <section>
+        <h2>
+            Its a mat
+        </h2>
+    </section>
 </body>
 </html>
